@@ -2,4 +2,5 @@ node_modules/
 coverage/
 out/
 dist/
+es5/
 *.tgz
