@@ -91,25 +91,33 @@ Command line:
 ```sh
 $ npm install futoin-invoker --save
 ```
+or
+```sh
+$ yarn add futoin-invoker
+```
+
+*Hint: checkout [FutoIn CID](https://github.com/futoin/cid-tool) for all tools setup.*
 
 All public classes can be accessed through module:
 ```javascript
-var AdvancedCCM = require('futoin-invoker').AdvancedCCM;
+const AdvancedCCM = require('futoin-invoker').AdvancedCCM;
 ```
 
 or included modular way, e.g.:
 ```javascript
-var AdvancedCCM = require('futoin-invoker/AdvancedCCM');
+const AdvancedCCM = require('futoin-invoker/AdvancedCCM');
 ```
 
 # Browser installation
 
-Pre-built `dist/futoin-invoker.js` and `dist/futoin-invoker-lite.js` are available.
+Pre-built ES5 CJS modules are available under `es5/` are available. These modules
+can be used with `webpack` without transpiler - default "browser" entry point
+points to ES5 version.
 
-The module can also be used with `webpack` or any other CommonJS packer, if ES6->ES5
-transpiler is used.
+Webpack dists are also available under dist/ folder, but their usage should be limited
+to sites without build process.
 
-*Warning: older browsers require WeakMap polyfill*
+*Warning: older browsers require WeakMap polyfill for synchronization primitives.*
 
 *The following globals are available*:
 
