@@ -30,6 +30,6 @@
 
     if ( module )
     {
-        module.exports = window.SimpleCCM;
+        module.exports = { SimpleCCM: window.SimpleCCM };
     }
 } )( window ); // jshint ignore:line
