@@ -31,3 +31,7 @@ exports.FutoInError = common.FutoInError;
 exports.InterfaceInfo = require( '../InterfaceInfo' );
 exports.NativeIface = require( '../NativeIface' );
 exports.SpecTools = require( '../SpecTools' );
+
+exports.CacheFace = require( '../CacheFace' );
+exports.LogFace = require( '../LogFace' );
+exports.PingFace = require( '../PingFace' );
