@@ -3,9 +3,12 @@
   "version": "1.7.3",
   "description": "Transparently, efficiently and securely invoke remote or local service methods with strict API definition for Node and Browser",
   "main": "lib/invoker.js",
-  "browser": "lib/browser.js",
+  "browser": "es5/lib/browser.js",
   "files": [
     "dist/",
+    "es5/",
+    "es5/lib/",
+    "es5/*.js",
     "examples/",
     "lib/",
     "AdvancedCCM.js",
@@ -63,7 +66,7 @@
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "eslint": "^4.13.1",
-    "futoin-asyncsteps": "^1.10.4",
+    "futoin-asyncsteps": "^1.10.7",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-eslint": "^20.1.0",
@@ -79,6 +82,6 @@
     "webpack": "^3.10.0"
   },
   "peerDependencies": {
-    "futoin-asyncsteps": "^1.10.4"
+    "futoin-asyncsteps": "^1.10.7"
   }
 }
