@@ -8,6 +8,33 @@ module.exports = {
     output: {
         filename: "[name].js",
         path: __dirname + '/dist',
+        libraryTarget: "umd",
+    },
+    externals : {
+        'futoin-asyncsteps' : {
+            root: "$as",
+            amd: "futoin-asyncsteps",
+            commonjs: "futoin-asyncsteps",
+            commonjs2: "futoin-asyncsteps",
+        },
+        'futoin-invoker' : {
+            root: "FutoInInvoker",
+            amd: "futoin-invoker",
+            commonjs: "futoin-invoker",
+            commonjs2: "futoin-invoker",
+        },
+        chai : {
+            root: "chai",
+            amd: "chai",
+            commonjs: "chai",
+            commonjs2: "chai",
+        },
+        mocha : {
+            root: "mocha",
+            amd: "mocha",
+            commonjs: "mocha",
+            commonjs2: "mocha",
+        },
     },
     node : false,
     module: {
@@ -15,16 +42,6 @@ module.exports = {
             {
                 test: /\.js$/,
                 exclude: /(node_modules|bower_components)/,
-                use: {
-                    loader: 'babel-loader',
-                    options: {
-                        presets: [ 'babel-preset-env' ],
-                        plugins: [ "transform-object-assign" ],
-                    },
-                },
-            },
-            {
-                test: /node_modules\/futoin-.*\.js$/,
                 use: {
                     loader: 'babel-loader',
                     options: {
